# pybind11_webcam_test

./: .gitignore  CMakeLists.txt  example.py  requirements.txt  setup.py
config/: config.toml
include/: struct.h  webcam.h
src/: bindings.cpp  webcam.cpp
